--- a/RequireJsTest/Site.Master
+++ b/RequireJsTest/Site.Master
@@ -14,7 +14,8 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+    <asp:ContentPlaceHolder ID="Header" runat="server">
+    </asp:ContentPlaceHolder>
 </head>
 <body>
     <form runat="server">
